--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,7 @@ cycler==0.12.1
 datasets==3.6.0
 debugpy==1.8.14
 decorator==5.2.1
+deepspeed==0.15.3
 defusedxml==0.7.1
 dill==0.3.8
 einops==0.8.1
@@ -51,6 +52,7 @@ gradio==4.33.0
 gradio_client==0.17.0
 h11==0.16.0
 hf-xet==1.1.3
+hjson==3.1.0
 httpcore==1.0.9
 httpx==0.28.1
 huggingface-hub==0.32.4
@@ -81,16 +83,19 @@ jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
 jupyterlab_widgets==3.0.15
 kiwisolver==1.4.8
+latex2sympy2_extended==1.10.2
 lazy_loader==0.4
 lxml==5.4.0
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
+math-verify==0.8.0
 matplotlib==3.10.3
 matplotlib-inline==0.1.7
 mdit-py-plugins==0.4.2
 mdurl==0.1.2
 mistune==3.1.3
 mpmath==1.3.0
+msgpack==1.1.1
 multidict==6.4.4
 multiprocess==0.70.16
 narwhals==1.44.0
@@ -99,6 +104,7 @@ nbconvert==7.16.6
 nbformat==5.10.4
 nest-asyncio==1.6.0
 networkx==3.3
+ninja==1.11.1.4
 notebook==7.4.3
 notebook_shim==0.2.4
 numpy==2.1.2
@@ -112,6 +118,7 @@ nvidia-curand-cu12==10.3.5.147
 nvidia-cusolver-cu12==11.6.1.9
 nvidia-cusparse-cu12==12.3.1.170
 nvidia-cusparselt-cu12==0.6.2
+nvidia-ml-py==12.575.51
 nvidia-nccl-cu12==2.21.5
 nvidia-nvjitlink-cu12==12.4.127
 nvidia-nvtx-cu12==12.4.127
@@ -137,6 +144,7 @@ protobuf==6.31.1
 psutil==7.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
+py-cpuinfo==9.0.0
 pyarrow==20.0.0
 pycparser==2.22
 pydantic==2.11.5
@@ -191,9 +199,9 @@ torchvision==0.21.0+cu124
 tornado==6.5.1
 tqdm==4.67.1
 traitlets==5.14.3
-transformers==4.48.0
+transformers==4.53.1
 triton==3.2.0
-trl==0.14.0
+trl @ file:///mnt/home/sanchit/rl-chart/trl
 typer==0.16.0
 types-python-dateutil==2.9.0.20250516
 typing-inspection==0.4.1
